# game_scout

./: .env.example  .gitignore  ARCHITECTURE.md  CONFIGURATION.md  CRITICAL_FIXES_CHECKLIST.md  CRITICAL_FIXES_SUMMARY.md  DASHBOARD_FIX_INSTRUCTIONS.md  DASHBOARD_V4_UPDATE.md  DEALS_V3_NOTES.md  DEBUG_DEALS_BOOTSTRAP.md  DEBUG_TRENDS_PIPELINE.md  EMERGING_ENGINE_V4_IMPLEMENTATION.md  EMERGING_V4_FINAL_STATUS.md  EMERGING_V4_STATUS.md  ENGINE_V4_STATUS.md  FINAL_STATUS.md  FIX_DEALS_ROUTING.md  GAME_SCOUT_BRAIN.md  IMMEDIATE_FIX_COMMANDS.md  PUBLIC_TUNNEL_README.md  QUICK_START.md  README.md  RELAUNCH_MVP_DEPLOYMENT.md  RELAUNCH_MVP_PLAN.md  RELAUNCH_SCOUT_SUMMARY.md  SYSTEM_LIVENESS_IMPLEMENTATION.md  TEST_DEALS_SQL.md  TZ_SYNTHETIC_UI_CHECK.md  URGENT_FIXES.md  docker-compose.yml  docker-compose.yml.backup  pyproject.toml  test_pitch.json
docker/: api.Dockerfile
docs/: ANTI_PATTERNS.md  CURSOR_PROTOCOL.md  CURSOR_PROTOCOL.md.bak  PLATFORM_THESIS.md  TZ_BRAIN_EVOLUTION.md
migrations/: apply_deal_intent_tables.sql  create_relaunch_failure_analysis.sql  create_relaunch_scan_runs.sql  env.py  script.py.mako
scripts/: apply_deal_intent_migration.sh  check_dashboard.sh  check_deals_data.sh  check_deals_data.sql  ops_check.sh  probe_steam_from_worker.sh  run_trends_pipeline.sh  seed_more_signals.sh  seed_trends_apps.sql  smoke.sh  start_api.sh  start_tunnel.sh  stop_tunnel.sh  test_deals_quality.sh  update_relaunch_mvp.sh  verify_brain_v3.sh  verify_deals_intent.sh  verify_deals_v1.1.sh  verify_deals_v1.2.sh  verify_deals_v2.sh  verify_deals_v3.sh  verify_engine_v5.sh  (+10 more)
(+135 files in other folders)
